--- a/FitNess/Info.plist
+++ b/FitNess/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMotionUsageDescription</key>
+	<string>Pedometer access is required to gather step and distance info.</string>
 </dict>
 </plist>
